test/expected/reinterpret_cast_v.out
reinterpret cast x into void
                        ^
25: error: reinterpret_cast type can not be "void"
